--- a/Case.css
+++ b/Case.css
@@ -1,3 +1,4 @@
+/* PAGE1 */
 body {
     margin: 0; /* Remove default margin */
     overflow: hidden; /* Hide scrollbars */
@@ -109,3 +110,5 @@ body {
   display: flex;
 
 }
+
+/* PAGE2 */
